Moved styling for MainBoard class into a partial scss file. Fixed spacing between Nav and MainBoard.

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -146,12 +146,19 @@ table {
   display: block; }
 
 /* close commented backslash hack */
+.userForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
 .userInfo {
+  position: relative;
+  top: 2rem;
+  margin-top: 1.5rem;
   width: 75%;
   max-width: 22rem;
   display: flex;
   flex-flow: column wrap;
-  margin: 5% auto 0 auto;
   border-radius: 4px;
   padding: 2rem 2rem;
   background-color: white; }
@@ -246,6 +253,9 @@ input.question {
     background-color: white; }
 
 #newCard {
+  position: relative;
+  top: 2rem;
+  margin-top: 1.5rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
